# themida-unmutate

./: CHANGELOG.md  README.md  plugin.json  pyproject.toml  themida-unmutate.spec
.github/workflows/: lint.yml  publish_pyinstaller.yml  publish_pypi.yml
binja_plugin/: __init__.py  actions.py  common.py  plugin.py
themida-unmutate/: __main__.py  export_llvm.py  llvmconvert.py  miasm_utils.py  symexec.py  unwrapping.py
themida_unmutate/: __main__.py  logging.py  main.py  miasm_utils.py  rebuilding.py  symexec.py  unwrapping.py
themida_unmutate/symbolic_execution/: __init__.py
themida_unmutate/symbolic_execution/x86/: __init__.py
