[tool.poetry]
name = "themida-unmutate"
version = "0.1.2"
description = "Static deobfuscator for Themida's mutation-based obfuscation."
authors = ["ergrelet <ergrelet@users.noreply.github.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
packages = [{include = "themida_unmutate"}]

[tool.poetry.dependencies]
python = "^3.11"
lief = "^0.13.2"
miasm = "^0.1.5"


[tool.poetry.group.dev.dependencies]
yapf = "^0.40.2"
mypy = "^1.8.0"
pylint = "^3.0.3"

[tool.poetry.scripts]
themida-unmutate = 'themida_unmutate.main:entry_point'

[tool.yapf]
column_limit = 120

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
no_implicit_optional = true
ignore_missing_imports = true

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 120
disable = "C0114, C0115, C0116, I1101"

[tool.pylint.TYPECHECK]
ignored-classes = "lief"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
